[gd_scene load_steps=13 format=3 uid="uid://bc1hreinxvhgf"]

[ext_resource type="Script" path="res://UI/COOP_UI/Scripts/Lobby_UI.gd" id="1_om5b0"]
[ext_resource type="Theme" uid="uid://cgg52bqvjuehj" path="res://UI/styles/Button_Style.tres" id="2_u1upv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8oyad"]
content_margin_left = 45.0
bg_color = Color(1, 0, 0, 1)
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2q5o6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_deasc"]
content_margin_left = 45.0
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 3
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lku84"]
content_margin_left = 45.0
bg_color = Color(0.6, 0.6, 0.6, 0)
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ktfky"]
content_margin_left = 48.0
content_margin_top = 3.0
content_margin_right = 3.0
content_margin_bottom = 3.0
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d27vi"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rtiq5"]
content_margin_left = 45.0
content_margin_top = 3.0
content_margin_right = 3.0
content_margin_bottom = 3.0
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gri7l"]
bg_color = Color(0.905882, 0.905882, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l3aag"]
bg_color = Color(0.905882, 0.905882, 0, 1)

[sub_resource type="Theme" id="Theme_3dl5p"]
Button/colors/font_color = Color(0, 0, 0, 1)
Button/colors/font_disabled_color = Color(0, 0, 0, 1)
Button/colors/font_focus_color = Color(0, 0, 0, 1)
Button/colors/font_hover_color = Color(0, 0, 0, 1)
Button/colors/font_pressed_color = Color(0, 0, 0, 1)
Button/font_sizes/font_size = 32
Button/styles/disabled = SubResource("StyleBoxFlat_8oyad")
Button/styles/focus = SubResource("StyleBoxEmpty_2q5o6")
Button/styles/hover = SubResource("StyleBoxFlat_deasc")
Button/styles/normal = SubResource("StyleBoxFlat_lku84")
Button/styles/pressed = SubResource("StyleBoxFlat_ktfky")
HSlider/styles/grabber_area = SubResource("StyleBoxFlat_d27vi")
HSlider/styles/grabber_area_highlight = SubResource("StyleBoxFlat_d27vi")
Label/colors/font_color = Color(0, 0, 0, 1)
OptionButton/styles/pressed = SubResource("StyleBoxFlat_rtiq5")
Panel/styles/panel = SubResource("StyleBoxFlat_gri7l")
PanelContainer/styles/panel = SubResource("StyleBoxFlat_l3aag")

[node name="Lobby_UI" type="CanvasLayer"]
script = ExtResource("1_om5b0")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.905882, 0.905882, 0, 1)

[node name="Players" type="Panel" parent="Control"]
custom_minimum_size = Vector2(300, 400)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.396
anchor_top = 0.299
anchor_right = 0.617
anchor_bottom = 0.719
offset_left = 0.679932
offset_top = 0.0799866
offset_right = -0.640137
offset_bottom = 0.47998
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_3dl5p")

[node name="MarginContainer" type="MarginContainer" parent="Control/Players"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Players/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Players/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/Players/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("Theme_3dl5p")
text = "Awaiting..."

[node name="Label2" type="Label" parent="Control/Players/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
theme = SubResource("Theme_3dl5p")
text = "0/2"

[node name="ItemList" type="ItemList" parent="Control/Players/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
item_count = 2
item_0/text = "HOST"
item_0/selectable = false
item_1/text = "CLIENT"
item_1/selectable = false

[node name="START" type="Button" parent="Control/Players/MarginContainer/VBoxContainer" groups=["audio_buttons"]]
layout_mode = 2
theme = ExtResource("2_u1upv")
text = "Start"

[node name="Load" type="Button" parent="Control/Players/MarginContainer/VBoxContainer" groups=["audio_buttons"]]
layout_mode = 2
theme = ExtResource("2_u1upv")
text = "Load_Save"

[node name="New" type="Button" parent="Control/Players/MarginContainer/VBoxContainer" groups=["audio_buttons"]]
visible = false
layout_mode = 2
theme = ExtResource("2_u1upv")
text = "New Game"

[connection signal="button_down" from="Control/Players/MarginContainer/VBoxContainer/START" to="." method="_on_start_button_down"]
[connection signal="button_down" from="Control/Players/MarginContainer/VBoxContainer/Load" to="." method="_on_load_button_down"]
